@@ -26,6 +26,7 @@ gateway = 10.6.7.1
 #image-repo = http://127.0.0.1
 # auto-create | auto-download
 image-missing-action = auto-create
+auto-update = 1
 
 [web]
 protocol = http
