@@ -1,5 +1,5 @@
 # Copyright (C) 2007-2011 José Antonio Calvo Fernández <jacalvo@zentyal.com>
-# Copyright (C) 2013 Rubén Durán Balda <rduran@zentyal.com>
+# Copyright (C) 2013-2014 Rubén Durán Balda <rduran@zentyal.com>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2, as
@@ -132,6 +132,7 @@ sub check
     $self->nameserverHost();
     $self->nameserver();
     $self->imageMissingAction();
+    $self->autoUpdate();
     $self->vmBuilderMirror();
     $self->vmBuilderSecurityMirror();
     $self->vmBuilderProxy();
@@ -1115,6 +1116,33 @@ sub autoDownloadImages
     return ($action eq 'auto-download');
 }
 
+# Method: autoUpdate
+#
+#   Gets the value for the auto-update option.
+#
+# Returns:
+#
+#   string - Value for the option.
+#
+# Exceptions:
+#
+#   <ANSTE::Exceptions::InvalidConfig> - throw if option is not valid
+#
+sub autoUpdate
+{
+    my ($self) = @_;
+
+    my $autoUpdate = $self->_getOption('deploy', 'auto-update');
+
+    if (not ANSTE::Validate::boolean($autoUpdate)) {
+        throw ANSTE::Exceptions::InvalidConfig('global/auto-update',
+                                               $autoUpdate,
+                                               $self->{confFile});
+    }
+
+    return $autoUpdate;
+}
+
 # Method: webProtocol
 #
 #   Gets the value for the default web protocol (http or https)
@@ -1546,6 +1574,7 @@ sub _setDefaults
     $self->{default}->{'comm'}->{'nameserver'} = $nameserver;
 
     $self->{default}->{'deploy'}->{'image-missing-action'} = 'auto-create';
+    $self->{default}->{'deploy'}->{'auto-update'} = 1;
 
     $self->{default}->{'web'}->{'protocol'} = 'http';
     $self->{default}->{'web'}->{'video'} = 0;
