@@ -1,4 +1,6 @@
 HEAD
+    + Added deploy/auto-update config key to enable/disable the auto-update
+      of base images before the deploy of scenarios
     + Added pre-update and post-update sections in the base image definitions
     + Added updateimg command that allow the update of base images
     + Added 'sikuli' test type to run sikuli tests in Windows machines
